--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.6",
     "date-fns": "^2.16.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
